# youtube_transcriber

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
youtube_transcript_generator/: __init__.py  document_generator.py  downloader.py  main.py  transcriber.py  translator.py
